--- a/public/style.css
+++ b/public/style.css
@@ -32,9 +32,12 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  background-color: #379683;
+    overflow-x: hidden;
+    overflow-y: scroll
 }
 
-.campus {
+/* .campus {
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -44,14 +47,29 @@ main {
   padding-block: 2px;
   margin: 2px;
   margin: auto;
-}
+} */
 
 .container {
+  background: #fff;
+  border: 5px solid #05386B;
+  width: 85%;
+  height: 80vH;
+  font-family: "Georgia", serif;
+  justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  background-color: #5CDB95;
+}
+
+.single-student {
 	background: #fff;
     border: 2px solid purple;
-    width: 85%;
+    width: 100%;
     height: 80vH;
     font-family: "Georgia", serif;
+    justify-content: space-between;
     display: flex;
     flex-direction: column;
     overflow-x: hidden;
@@ -73,15 +91,139 @@ background-color: lightgrey;
   }
 
   img {
-    max-width: 200px;
+    max-width: 300px;
   }
 
   .links {
     color: #fff;
   }
 
-  .block {
-display: flex;
-margin-block: black;
-border: red;
+  /* .box {
+    background-color: lightgrey;
+      width: 50px;
+      border: 2px solid green;
+      padding: 25px;
+      margin: 10px;
+    } */
+
+  .campus {
+    /* border: 2px solid purple; */
+    width: 32%;
+    padding-bottom: 18%;
+    margin-bottom: 2%;
+    margin-top: 2%;
+    padding-top: 18%;
+
+    display: flex;
+    /* margin: 20px; */
+    border: 5px solid #05386B;
+    background-color: #EDF5E1;
+    padding: 10px;
+    /* flex-grow: 1;
+    height: 100px; */
+    flex-direction: row;
   }
+  .addCampus {
+    width: 85%;
+    padding-bottom: 18%;
+    margin-bottom: 2%;
+    margin-top: 2%;
+    padding-top: 18%;
+    border: 5px solid #05386B;
+    padding: 10px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #EDF5E1
+
+  }
+
+  /* .forms{
+    margin: 10px;
+  } */
+
+  /* .textEntered{
+    margin: 10px;
+  } */
+
+  .addStudent{
+    width: 80%;
+    padding-bottom: 18%;
+    margin-bottom: 2%;
+    margin-top: 2%;
+    padding-top: 18%;
+    border: 5px solid #05386B;
+    padding: 10px;
+    display: flex;
+    align-content: center;
+    flex-wrap: wrap;
+    align-items: stretch;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #EDF5E1;
+  }
+
+  .actionHeader{
+    font-size: x-large;
+    font-weight: bolder;
+  }
+
+  .student {
+    /* border: 2px solid purple; */
+    width: 32%;
+    padding-bottom: 18%;
+    margin-bottom: 5%;
+    margin-top: 2%;
+    padding-top: 18%;
+    /* margin: 20px; */
+    border: 5px solid #05386B;
+    padding: 10px;
+    display: flex;
+    /* padding: 10px; */
+    align-items: center;
+    flex-direction: column;
+    align-content: center;
+    background-color: #EDF5E1;
+
+    /* width: 32%;
+    padding-bottom: 18%;
+    margin-bottom: 5%;
+    margin-top: 2%;
+    padding-top: 18%; */
+    /* margin: 20px; */
+    /* border: 5px solid purple;
+    padding: 10px; */
+    /* padding: 10px; */
+    /* flex-grow: 1;
+    height: 100px; */
+    /* flex-direction: column;
+    align-items: center; */
+  }
+
+  .single-student-detail {
+    /* border: 2px solid purple; */
+
+
+    width: 32%;
+    /* padding-bottom: 5%; */
+    margin-bottom: 0%;
+    margin-top: 2%;
+    padding-top: 18%;
+    /* margin: 20px; */
+    border: 5px solid purple;
+    padding: 10px;
+    /* padding: 10px; */
+    /* flex-grow: 1;
+    height: 100px; */
+    /* flex-direction: column;
+    align-items: center; */
+  }
+
+.remove{
+  border: 2px solid black
+}
+
+  /* .item + .item {
+    margin-left: 2%;
+  } */
