--- a/public/style.css
+++ b/public/style.css
@@ -32,7 +32,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: #379683;
+  background-color: lightgray;
     overflow-x: hidden;
     overflow-y: scroll
 }
@@ -60,20 +60,21 @@ main {
   flex-direction: column;
   overflow-x: hidden;
   overflow-y: scroll;
-  background-color: #5CDB95;
+  background-color: lightslategray;
 }
 
 .single-student {
-	background: #fff;
-    border: 2px solid purple;
-    width: 100%;
-    height: 80vH;
-    font-family: "Georgia", serif;
-    justify-content: space-between;
-    display: flex;
-    flex-direction: column;
-    overflow-x: hidden;
-    overflow-y: scroll;
+  background: #fff;
+  /* border:  5px solid #05386B; */
+  /* width: 95%; */
+  /* height: 80vH; */
+  font-family: "Georgia", serif;
+  justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  background-color: lightgray;
 }
 
 .box {
@@ -108,7 +109,7 @@ background-color: lightgrey;
 
   .campus {
     /* border: 2px solid purple; */
-    width: 32%;
+    /* width: 32%; */
     padding-bottom: 18%;
     margin-bottom: 2%;
     margin-top: 2%;
@@ -122,6 +123,8 @@ background-color: lightgrey;
     /* flex-grow: 1;
     height: 100px; */
     flex-direction: row;
+    margin-left: 30%;
+    margin-right: 30%;
   }
   .addCampus {
     width: 85%;
@@ -202,28 +205,33 @@ background-color: lightgrey;
   }
 
   .single-student-detail {
-    /* border: 2px solid purple; */
-
-
-    width: 32%;
-    /* padding-bottom: 5%; */
-    margin-bottom: 0%;
-    margin-top: 2%;
-    padding-top: 18%;
-    /* margin: 20px; */
-    border: 5px solid purple;
-    padding: 10px;
-    /* padding: 10px; */
-    /* flex-grow: 1;
-    height: 100px; */
-    /* flex-direction: column;
-    align-items: center; */
+      /* border: 2px solid purple; */
+      /* width: 32%; */
+      /* padding-bottom: 5%; */
+      margin-bottom: 10%;
+      margin-top: 10%;
+      padding-top: 18%;
+      /* margin: 20px; */
+      background-color: lightslategray;
+      border: 5px solid #05386B;
+      padding: 10px;
   }
 
 .remove{
-  border: 2px solid black
+  /* border: 2px solid black */
+  text-decoration: underline;
 }
 
   /* .item + .item {
     margin-left: 2%;
   } */
+
+  .nameLine{
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+.x-button{
+  margin-left: 20%;
+    margin-right: 20%;
+}
